changed the height of the callout and header to attempt to fix a problem on iOS

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -169,13 +169,14 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 100%;
-    min-height: 100vh;
+    height: 100vh;
+    max-height: 100%;
     background: url(../img/wun2freeheader.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    overflow: hidden;
   
 }
 
@@ -213,8 +214,8 @@ hr.small {
 .callout {
     display: table;
     width: 100%;
-    height: 400px;
-    min-height: 400px;
+    height: 40vh;
+    max-height: 400px;
     color: #fff;
     background: url(../img/2nd-banner.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -222,6 +223,7 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
     font-family: 'News Cycle', sans-serif;
+    overflow: hidden;
   
 }
 
